...
  <string name="onboarding_step_count_four">STEP 4 OF 5</string>

  <!-- Onboarding Shared Strings -->
  <string name="onboarding_otter_content_description">Cute otter wearing glasses.</string>
  <string name="onboarding_learner_otter_content_description">Cute otter with books.</string>
  <string name="onboarding_parent_otter_content_description">Mama and baby otter.</string>
  <string name="onboarding_navigation_back">Back</string>
  <string name="onboarding_navigation_continue">Continue</string>

  <!-- Onboarding Audio Language Fragment -->
  <string name="audio_language_fragment_text">In %s, you can listen to lessons!</string>
  <string name="audio_language_fragment_subtitle">Select the audio language to listen to lessons</string>
  <string name="onboarding_step_count_five">STEP 5 OF 5</string>

  <!-- AudioLanguageFragment -->
  <string name="arabic_language_display_name_content_description">Arabic</string>

</resources>

